--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
+    <title>我的网页</title>
     <head>
         <meta charset="UTF-8">
     </head>
     <body>
+            <link href="..style.css" rel="stylesheet" type="text/css" />
         <p>你好</p>
-        <h3>这是我的网页</h3>
     </body>
 </html>
