--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
     </head>
     <body>
-            <link href="..style.css" rel="stylesheet" type="text/css" />
-        <p>你好</p>
+            <link href="style.css" rel="stylesheet" type="text/css" />
+        <p>你好！</p>
+        <a href="https://mail.163.com/js6/main.jsp?sid=OATigWDndzaugSPHaKnnHGOgSDIkbMln&df=mail163_letter#module=welcome.WelcomeModule%7C%7B%7D">我的邮箱</a>
     </body>
 </html>
