--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <canvas></canvas>
         <script  src="script.js"></script>
         <p>你好！</p>
+        <img href="E3B17BCD-3BAA-482C-8C03-C27643F24A0E.jpeg">
         <a href="https://mail.163.com/js6/main.jsp?sid=OATigWDndzaugSPHaKnnHGOgSDIkbMln&df=mail163_letter#module=welcome.WelcomeModule%7C%7B%7D">我的邮箱</a>
     </body>
 </html>
