--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
         <canvas></canvas>
         <script  src="script.js"></script>
-        <p>你好！这里是金的网页</p>
-        <p>这里没什么东西</p>
-        <a href="https://mail.163.com/js6/main.jsp?sid=OATigWDndzaugSPHaKnnHGOgSDIkbMln&df=mail163_letter#module=welcome.WelcomeModule%7C%7B%7D">我的邮箱</a>
+        <p>明天英语考试</p>
+        <p>会做的全对     不会的蒙对</p>
+        <!--<a href="https://mail.163.com/js6/main.jsp?sid=OATigWDndzaugSPHaKnnHGOgSDIkbMln&df=mail163_letter#module=welcome.WelcomeModule%7C%7B%7D">我的邮箱</a>-->
     </body>
 </html>
