--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <link href="style.css" rel="stylesheet" type="text/css" />
         <canvas></canvas>
-        <script  src="script.js"></script>
         <p>明天英语考试</p>
         <p>会做的全对     不会的蒙对</p>
+        <img src="FFA38945-AD4B-4A0D-B4A9-A48EA634B4D7.webp" alt="一条锦鲤" width=100 height=100>
         <!--<a href="https://mail.163.com/js6/main.jsp?sid=OATigWDndzaugSPHaKnnHGOgSDIkbMln&df=mail163_letter#module=welcome.WelcomeModule%7C%7B%7D">我的邮箱</a>-->
     </body>
 </html>
