--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <link href="style.css" rel="stylesheet" type="text/css" />
-        <canvas></canvas>
-        <p>明天英语考试</p>
-        <!--<script> src="script.js" ></script>-->
-        <p>祝 会做的全对     不会的蒙对</p>
-        <img src="FFA38945-AD4B-4A0D-B4A9-A48EA634B4D7.webp" alt="一条锦鲤" width="500" height="500">
-        <!--<a href="https://mail.163.com/js6/main.jsp?sid=OATigWDndzaugSPHaKnnHGOgSDIkbMln&df=mail163_letter#module=welcome.WelcomeModule%7C%7B%7D">我的邮箱</a>-->
+        <div>
+            <link href="style.css" rel="stylesheet" type="text/css" />
+            <canvas></canvas>
+            <p>你在看什么</p>
+            <!--<script> src="script.js" ></script>-->
+            <p>已知a ²-a=3,b²-b=3,求a五次方与b五次方的和</p>
+            <img src="FFA38945-AD4B-4A0D-B4A9-A48EA634B4D7.webp" alt="一条锦鲤" width="500" height="500">
+        </div>
+        <div>
+            <p>跳转到：</p>
+            <a href="https://www.baidu.com">百度</a>
+            <a href="http://guohangtao.com/hlbt/">哈利波特</a>
+            <a href="https://www.bilibili.com">哔哩哔哩</a>
+        </div>
     </body>
 </html>
