--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
+    <!--基础设施-->
     <title>哈哈</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <audio src="Hedwig Theme.mp3" controls></audio>
     <head>
         <meta charset="UTF-8">
     </head>
     <body>
         <div>
-            <link href="style.css" rel="stylesheet" type="text/css" />
             <canvas></canvas>
             <p>你在看什么</p>
             <!--<script> src="script.js" ></script>-->
