--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
-    <!--基础设施-->
+    <!--基础设置-->
+    <!--标题-->
     <title>哈哈</title>
+    <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <audio src="Hedwig Theme.mp3" controls></audio>
+    <audio autoplay="autoplay" loop="loop" preload-"preload" src="Hedwig Theme.mp3"></audio>
     <head>
         <meta charset="UTF-8">
     </head>
@@ -13,7 +15,7 @@
             <p>你在看什么</p>
             <!--<script> src="script.js" ></script>-->
             <p>已知a ²-a=3,b²-b=3,求a五次方与b五次方的和</p>
-            <img src="FFA38945-AD4B-4A0D-B4A9-A48EA634B4D7.webp" alt="一条锦鲤" width="500" height="500">
+            <img src="锦鲤.webp" alt="一条锦鲤" width="500" height="500">
         </div>
         <div>
             <p>跳转到：</p>
