--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>你在看什么</p>
             <!--<script> src="script.js" ></script>-->
             <p>已知a ²-a=3,b²-b=3,求a五次方与b五次方的和</p>
-            <img src="锦鲤.webp" alt="一条锦鲤" width="500" height="500">
+            <img src="FFA38945-AD4B-4A0D-B4A9-A48EA634B4D7.webp" alt="一条锦鲤" width="500" height="500">
         </div>
         <div>
             <p>跳转到：</p>
