--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body>
         <div>
             <canvas></canvas>
-            <p>你在看什么</p>
+            <p>哈哈</p>
             <!--<script> src="script.js" ></script>-->
-            <p>已知a ²-a=3,b²-b=3,求a五次方与b五次方的和</p>
+            <p>请证明三角形ABC与三角形CBA为全等三角形</p>
             <img src="FFA38945-AD4B-4A0D-B4A9-A48EA634B4D7.webp" alt="一条锦鲤" width="500" height="500">
         </div>
         <div>
