--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <!--<script> src="script.js" ></script>-->
             <p>请证明三角形ABC与三角形CBA为全等三角形</p>
             <img src="FFA38945-AD4B-4A0D-B4A9-A48EA634B4D7.webp" alt="一条锦鲤" width="500" height="500">
+            <p>ςسحقθ</p>
         </div>
         <div>
             <p>跳转到：</p>
