--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <!--基础设置-->
     <!--标题-->
-    <title>哈哈</title>
+    <title>主页</title>
     <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <audio autoplay="autoplay" loop="loop" preload="preload" src="Hedwig Theme.mp3"></audio>
@@ -15,8 +15,9 @@
             <p>哈哈</p>
             <!--<script> src="script.js" ></script>-->
             <p>请证明三角形ABC与三角形CBA为全等三角形</p>
+            <p>需要吗？</p>
             <img src="FFA38945-AD4B-4A0D-B4A9-A48EA634B4D7.webp" alt="一条锦鲤" width="500" height="500">
-            <p>ςسحقθ</p>
+            <p>سحقθ</p>
         </div>
         <div>
             <p>跳转到：</p>
