--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <head>
         <meta charset="UTF-8">
     </head>
-    <body background="C364363E-C1CC-4003-A071-13336A3CA5D3.jpeg">
+    <body background="blue">
         <div>
             <canvas></canvas>
             <p>哈哈</p>
