--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
             <p>سحقθ</p>
         </div>
         <div>
-            <p>跳转到：</p>
-            <a href="https://www.baidu.com">百度</a>
-            <a href="http://guohangtao.com/hlbt/">哈利波特</a>
-            <a href="https://www.bilibili.com">哔哩哔哩</a>
-            <a href="https://zho-b.github.io/starting/">这个网页</a>
+            <a href="https://zho-b.github.io/starting/le.html">中转站</a>
         </div>
         <div>哈哈，到尾了</div>
     </body>
