--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!--<script> src="script.js" ></script>-->
             <p>请证明三角形ABC与三角形CBA为全等三角形</p>
             <p>需要吗？</p>
-            <img src="moon.jpg.HEIC" alt="中秋月" width="500" height="500">
+            <img src="moon.jpg.HEIC" alt="中秋月" width="500" height="500"/>
             <a href="https://zho-b.github.io/starting/login.html">登录/注册</a>
             <p>سحقθ</p>
         </div>
