--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <head>
         <meta charset="UTF-8">
     </head>
-    <body background="white">
+    <body style="background-color:orange;">
         <div>
             <canvas></canvas>
             <p>哈哈</p>
