--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <!--基础设置-->
     <!--标题-->
-    <title>主页</title>
+    <title>我的主页</title>
     <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <audio autoplay="autoplay" loop="loop" preload="preload" src="Hedwig Theme.mp3"></audio>
