--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <head>
         <meta charset="UTF-8">
     </head>
-    <body style="background-color:orange;">
+    <body background="moon.jpeg">
         <div>
             <canvas></canvas>
             <p>哈哈</p>
             <!--<script> src="script.js" ></script>-->
             <p>请证明三角形ABC与三角形CBA为全等三角形</p>
             <p>需要吗？</p>
-            <img src="moon.jpeg" alt="中秋月" width="500" height="500">
+            <!--<img src="moon.jpeg" alt="中秋月" width="500" height="500">-->
             <p>سحقθ</p>
         </div>
         <div>
