--- a/le.html
+++ b/le.html
@@ -5,7 +5,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css"/>
         <meta charset="utf-8">
     </head>
-<body>
+<body background="moon.jpeg">
 	<div>
 	    <a href="https://www.baidu.com">百度</a>
 	</div>
