--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!--<script> src="script.js" ></script>-->
             <p>请证明三角形ABC与三角形CBA为全等三角形</p>
             <p>需要吗？</p>
-            <img src="POPO猫.jpg" alt="这是什么？" width="500" height="500">
+            <img src="雪融容.jpg" alt="看什么，快买一个" width="500" height="500">
             <p>سحقθ</p>
         </div>
         <div>
