--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <div>
             <canvas></canvas>
             <p>哈哈</p>
+            <div>
+                <div>
+                    <p>如果图片加载出来一大片白，多刷新几次网页再看看</p>
+                </div>
+            </div>
             <!--<script> src="script.js" ></script>-->
             <p>请证明三角形ABC与三角形CBA为全等三角形</p>
             <p>需要吗？</p>
