--- a/le.html
+++ b/le.html
@@ -13,7 +13,7 @@
 	    <a href="https://www.bilibili.com">哔哩哔哩</a>
 	</div>
 	<div>
-	    <a href="https://zho-b.github.io/starting">back</a>
+	    <a href="https://zho-b.github.io/starting">主页</a>
 	</div>
 	</body>
 	<div>暂时想不出来了</div>
