--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>哈哈</p>
             <div>
                 <div>
-                    <p>如果图片加载出来一大片白，多刷新几次网页再看看</p>
+                    <p>如果图片加载出来一大片白，多刷新几次网页</p>
                 </div>
             </div>
             <!--<script> src="script.js" ></script>-->
