--- a/le.html
+++ b/le.html
@@ -16,7 +16,7 @@
 	    <a href="https://zho-b.github.io/starting">主页</a>
 	</div>
 	<div>
-		<a href="https://zho-b.github.io/storm">不是自己写的一个网页但好看</a>
+		<a href="https://zho-b.github.io/starting/storm.html">不是自己写的代码但好看</a>
 	</div>
 	</body>
 	<div>暂时想不出来了</div>
