--- a/ch-w.html
+++ b/ch-w.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>语文重要文言文</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css"/>
+    <link type="text/css" rel="stylesheet" href="style-ch.css"/>
 </head>
 <body>
     <div>
