--- a/ch-w.html
+++ b/ch-w.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <title>语文重要文言文</title>
     <link type="text/css" rel="stylesheet" href="style-ch.css"/>
 </head>
-<body>
+<body background="moon.jpeg">
     <div>
         <h1>文言文</h1>
     </div>
