--- a/le.html
+++ b/le.html
@@ -18,6 +18,9 @@
 	<div>
 		<a href="https://zho-b.github.io/starting/storm.html">不是自己写的代码但好看</a>
 	</div>
+	<div>
+		<a href="https://zho-b.github.io/starting/ch-w.html">语文文言文</a>
+	</div>
 	</body>
 	<div>暂时想不出来了</div>
 	</html>
