--- a/ch-w.html
+++ b/ch-w.html
@@ -5,7 +5,7 @@
     <title>语文重要文言文</title>
     <link type="text/css" rel="stylesheet" href="style-ch.css"/>
 </head>
-<body background="moon.jpeg">
+<body background="9E7C2CE5-CD6D-4BDB-B108-8F1C4D19360B.png">
     <div>
         <h1>文言文</h1>
     </div>
