--- a/ch-w.html
+++ b/ch-w.html
@@ -8,6 +8,7 @@
 <body background="9E7C2CE5-CD6D-4BDB-B108-8F1C4D19360B.png">
     <div>
         <h1>文言文</h1>
+        <h3>#浏览器支持阅读器模式的可开启阅读器模式#</h3>
     </div>
     <div>
     <h2>小石潭记 唐-柳宗元</h2>
