--- a/ch-w.html
+++ b/ch-w.html
@@ -5,13 +5,34 @@
     <title>语文重要文言文</title>
     <link type="text/css" rel="stylesheet" href="style-ch.css"/>
 </head>
-<body background="9E7C2CE5-CD6D-4BDB-B108-8F1C4D19360B.png">
+<body>
     <div>
         <h1>文言文</h1>
         <h3>#浏览器支持阅读器模式的可开启阅读器模式#</h3>
     </div>
     <div>
-    <h2>小石潭记 唐-柳宗元</h2>
+        <h2>木兰辞 南北朝·？</h2>
+        <p>唧唧复唧唧，木兰当户织。不闻机杼声，唯闻女叹息。
+问女何所思，问女何所忆。女亦无所思，女亦无所忆。昨夜见军帖，可汗大点兵，军书十二卷，卷卷有爷名。阿爷无大儿，木兰无长兄，愿为市鞍马，从此替爷征。
+东市买骏马，西市买鞍鞯，南市买辔头，北市买长鞭。旦辞爷娘去，暮宿黄河边，不闻爷娘唤女声，但闻黄河流水鸣溅溅。旦辞黄河去，暮至黑山头，不闻爷娘唤女声，但闻燕山胡骑鸣啾啾。
+万里赴戎机，关山度若飞。朔气传金柝，寒光照铁衣。将军百战死，壮士十年归。
+归来见天子，天子坐明堂。策勋十二转，赏赐百千强。可汗问所欲，木兰不用尚书郎，愿驰千里足，送儿还故乡。
+爷娘闻女来，出郭相扶将；阿姊闻妹来，当户理红妆；小弟闻姊来，磨刀霍霍向猪羊。开我东阁门，坐我西阁床，脱我战时袍，著我旧时裳。当窗理云鬓，对镜帖花黄。出门看火伴，火伴皆惊忙：同行十二年，不知木兰是女郎。
+            雄兔脚扑朔，雌兔眼迷离；双兔傍地走，安能辨我是雄雌？</p>
+    <p>译文：
+        叹息声一声接着一声，木兰姑娘当门在织布。织机停下来不再作响，只听见姑娘在叹息。问姑娘在思念什么，问姑娘在惦记什么。我也没有在想什么，也没有在惦记什么。
+    昨夜看见征兵的文书，知道君王在大规模征募兵士，那么多卷征兵文书，每卷上都有父亲的名字。父亲没有长大成人的儿子，木兰没有兄长，木兰愿意去买来马鞍和马匹，从此替父亲去出征。
+    到各地集市买骏马，马鞍和鞍下的垫子，马嚼子和缰绳，马鞭。早上辞别父母上路，晚上宿营在黄河边，听不见父母呼唤女儿的声音，但能听到黄河汹涌奔流的声音。
+    早上辞别黄河上路，晚上到达黑山（燕山）脚下，听不见父母呼唤女儿的声音，但能听到燕山胡兵战马啾啾的鸣叫声。行军万里奔赴战场作战，翻越关隘和山岭就像飞过去一样快。
+    北方的寒风中传来打更声，清冷的月光映照着战士们的铠甲。将士们经过无数次出生入死的战斗，有些牺牲了，有的十年之后得胜而归。归来朝见天子，天子坐上殿堂（论功行赏）。
+    记功木兰最高一等，得到的赏赐千百金以上。天子问木兰有什么要求，木兰不愿做尚书省的官，希望骑上一匹千里马，送我回故乡。父母听说女儿回来了，互相搀扶着出城（迎接木兰）。
+    姐姐听说妹妹回来了，对门梳妆打扮起来。小弟弟听说姐姐回来了，霍霍地磨刀杀猪宰羊。
+    打开我闺房东面的门，坐在我闺房西面的床上，脱去我打仗时穿的战袍，穿上我姑娘的衣裳，当着窗子整理像云一样柔美的鬓发，对着镜子在额上贴好花黄。
+    出门去见同营的伙伴，伙伴们都很吃惊，同行数年之久，竟然不知道木兰是女孩子。雄兔两只脚时常动弹，雌兔两只眼时常眯着(所以容易辨别)。
+    雄雌两只兔子一起并排着跑时，怎能辨别出哪只是雄兔，哪只是雌兔？</p>
+    </div>
+    <div>
+    <h2>小石潭记 唐·柳宗元</h2>
     <h3>初二下学期背</h3>
     <p>  从小丘西行百二十步，隔篁竹，闻水声，如鸣珮环，心乐之。伐竹取道，下见小潭，水尤清冽。全石以为底，近岸，卷石底以出，为坻，为屿，为嵁，为岩。青树翠蔓，蒙络摇缀，参差披拂。
 潭中鱼可百许头，皆若空游无所依，日光下澈，影布石上。佁然不动，俶尔远逝，往来翕忽，似与游者相乐。
@@ -22,7 +43,7 @@
         从小丘向西走一百二十多步，隔着竹林，可以听到流水的声音，好像人身上佩带的珮环相互碰击发出的声音，心里十分高兴。砍倒竹子，开辟出一条道路（走过去），沿路走下去看见一个小潭，潭水格外清凉。小潭以整块石头为底，靠近岸边的地方，石底有些部分翻卷出来，露出水面，成为水中的高地，成为水中的小岛，成为水中的不平岩石，成为水中的悬崖。青翠的树木，翠绿的藤蔓，遮掩缠绕，摇动下垂，参差不齐，随风飘拂。潭中的鱼大约有一百来条，都好像在空中游动，什么依靠都没有，阳光直照（到水底），（鱼的）影子映在石头上。呆呆地（停在那里）一动不动，忽然间(又)向远处游去了，来来往往，轻快敏捷，好像和游玩的人互相取乐。向小石潭的西南方望去，看到溪水像北斗星那样曲折，水流像蛇那样蜿蜒前行，一段明的看得见，一段暗的看不见。两岸的地势像狗的牙齿那样相互交错，不能知道溪水的源头。我坐在潭边，四下里竹林和树木包围着，寂静寥落，空无一人。使人感到心情凄凉，寒气入骨，幽静深远，弥漫着忧伤的气息。因为这里的环境太凄清，不可长久停留，于是记下了这里的情景就离开了。一同去游览的人有：吴武陵，龚古，我的弟弟宗玄。跟着同去的有姓崔的两个年轻人：一个名叫恕己，一个名叫奉壹。</p>
     </div>
     <div>
-        <h2>岳阳楼记 宋-范仲淹</h2>
+        <h2>岳阳楼记 宋·范仲淹</h2>
         <h3>初三上学期背</h3>
         <p>庆历四年春，滕子京谪守巴陵郡。越明年，政通人和，百废具兴，乃重修岳阳楼，增其旧制，刻唐贤今人诗赋于其上，属予作文以记之。
 予观夫巴陵胜状，在洞庭一湖。衔远山，吞长江，浩浩汤汤，横无际涯，朝晖夕阴，气象万千，此则岳阳楼之大观也，前人之述备矣。然则北通巫峡，南极潇湘，迁客骚人，多会于此，览物之情，得无异乎？
@@ -36,7 +57,7 @@
     </p>
     </div>
     <div>
-        <h2>出师表 三国-诸葛亮</h2>
+        <h2>出师表 三国·诸葛亮</h2>
         <h3>初三下学期背</h3>
         <p>先帝创业未半而中道崩殂，今天下三分，益州疲弊，此诚危急存亡之秋也。然侍卫之臣不懈于内，忠志之士忘身于外者，盖追先帝之殊遇，欲报之于陛下也。诚宜开张圣听，以光先帝遗德，恢弘志士之气，不宜妄自菲薄，引喻失义，以塞忠谏之路也。
 宫中府中，俱为一体，陟罚臧否，不宜异同。若有作奸犯科及为忠善者，宜付有司论其刑赏，以昭陛下平明之理，不宜偏私，使内外异法也。
@@ -52,7 +73,7 @@
         </p>
     </div>
     <div>
-        <h2>范进中举 《儒林外史》-吴敬梓</h2>
+        <h2>范进中举 《儒林外史》·吴敬梓</h2>
         <h3>这篇不会要求背</h3>
         <p>范进不看便罢，看了一遍，又念一遍，自己把两手拍了一下，笑了一声，道：“噫！好了！我中了！”说着，往后一跤跌倒，牙关咬紧，不省人事。老太太慌了，慌将几口开水灌了过来。他爬将起来，又拍着手大笑道：“噫！好！我中了！”笑着，不由分说，就往门外飞跑，把报录人和邻居都吓了一跳。走出大门不多路，一脚踹在塘里，挣起来，头发都跌散了，两手黄泥，淋淋漓漓一身的水。众人拉他不住，拍着笑着，一直走到集上去了。众人大眼望小眼，一齐道：“原来新贵人欢喜疯了。”老太太哭道：“怎生这样苦命的事！中了一个甚么举人，就得了这个拙病！这一疯了，几时才得好？”娘子胡氏道：“早上好好出去，怎的就得了这样的病！却是如何是好？”众邻居劝道：“老太太不要心慌。我们而今且派两个人跟定了范老爷。这里众人家里拿些鸡蛋酒米，且管待了报子上的老爹们，再为商酌。</p>
         <p>译文： 非常简单罢。</p>
