--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <audio autoplay="autoplay" loop="loop" preload="preload" src="Hedwig Theme.mp3"></audio>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="GBK">
     </head>
     <body background="moon.jpeg">
         <div>
