--- a/le.html
+++ b/le.html
@@ -3,7 +3,7 @@
 <html>
     <head>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
-        <meta charset="utf-8">
+        <meta charset="GBK">
     </head>
 <body background="moon.jpeg">
 	<div>
