--- a/ch-w.html
+++ b/ch-w.html
@@ -7,17 +7,16 @@
 </head>
 <body>
     <div>
-        <h1>文言文</h1>
+        <strong><h1>文言文</h1></br></strong>
         <h3>#浏览器支持阅读器模式的可开启阅读器模式#</h3>
     </div>
     <div>
         <h2>木兰辞 南北朝·？</h2>
-        <p>唧唧复唧唧，木兰当户织。不闻机杼声，唯闻女叹息。
-问女何所思，问女何所忆。女亦无所思，女亦无所忆。昨夜见军帖，可汗大点兵，军书十二卷，卷卷有爷名。阿爷无大儿，木兰无长兄，愿为市鞍马，从此替爷征。
-东市买骏马，西市买鞍鞯，南市买辔头，北市买长鞭。旦辞爷娘去，暮宿黄河边，不闻爷娘唤女声，但闻黄河流水鸣溅溅。旦辞黄河去，暮至黑山头，不闻爷娘唤女声，但闻燕山胡骑鸣啾啾。
-万里赴戎机，关山度若飞。朔气传金柝，寒光照铁衣。将军百战死，壮士十年归。
-归来见天子，天子坐明堂。策勋十二转，赏赐百千强。可汗问所欲，木兰不用尚书郎，愿驰千里足，送儿还故乡。
-爷娘闻女来，出郭相扶将；阿姊闻妹来，当户理红妆；小弟闻姊来，磨刀霍霍向猪羊。开我东阁门，坐我西阁床，脱我战时袍，著我旧时裳。当窗理云鬓，对镜帖花黄。出门看火伴，火伴皆惊忙：同行十二年，不知木兰是女郎。
+        <p>唧唧复唧唧，木兰当户织。<br/>不闻机杼声，唯闻女叹息。<br/>问女何所思，问女何所忆。<br/>女亦无所思，女亦无所忆。<br/>昨夜见军帖，可汗大点兵，军书十二卷，卷卷有爷名。<br/>
+            阿爷无大儿，木兰无长兄，愿为市鞍马，从此替爷征。<br/>东市买骏马，西市买鞍鞯，南市买辔头，北市买长鞭。<br/>旦辞爷娘去，暮宿黄河边，不闻爷娘唤女声，但闻黄河流水鸣溅溅。<br/>
+            旦辞黄河去，暮至黑山头，不闻爷娘唤女声，但闻燕山胡骑鸣啾啾。<br/>万里赴戎机，关山度若飞。朔气传金柝，寒光照铁衣。将军百战死，壮士十年归。<br/>
+            归来见天子，天子坐明堂。<br/>策勋十二转，赏赐百千强。<br/>可汗问所欲，木兰不用尚书郎，愿驰千里足，送儿还故乡。<br/>爷娘闻女来，出郭相扶将；阿姊闻妹来，当户理红妆；小弟闻姊来，磨刀霍霍向猪羊。<br/>
+            开我东阁门，坐我西阁床，脱我战时袍，著我旧时裳。当窗理云鬓，对镜帖花黄。出门看火伴，火伴皆惊忙：同行十二年，不知木兰是女郎。
             雄兔脚扑朔，雌兔眼迷离；双兔傍地走，安能辨我是雄雌？</p>
     <p>译文：
         叹息声一声接着一声，木兰姑娘当门在织布。织机停下来不再作响，只听见姑娘在叹息。问姑娘在思念什么，问姑娘在惦记什么。我也没有在想什么，也没有在惦记什么。
