--- a/ch-w.html
+++ b/ch-w.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="Unicode">
     <title>语文重要文言文</title>
     <link type="text/css" rel="stylesheet" href="style-ch.css"/>
 </head>
