--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>请证明三角形ABC与三角形CBA为全等三角形</p>
             <p>需要吗？</p>
             <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
-            <p>سحقθ</p>
+            <p>йسحقθ</p>
             <h3>84</h3>
         </div>
         <div>
