--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body background="moon.jpeg">
         <div>
             <canvas></canvas>
-            <h1>欢迎！</h1>
+            <strong><h1>欢迎！</h1></strong>
             <h3>？</h3>
             <p>哈哈</p>
             <div>
