--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>我的主页</title>
     <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <audio autoplay="autoplay" loop="loop" preload="auto" src="Hedwig Theme.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="Hedwig Theme.mp3"></audio>
     <head>
         <meta charset="UTF-8">
     </head>
