--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <!--<script> src="script.js" ></script>-->
-            <p>请证明三角形ABC与三角形CBA为全等三角形</p>
+            <p>请证明△ABC与△CBA为全等三角形</p>
             <p>需要吗？</p>
             <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
             <p>йسحقθ</p>
