--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="grasswalk.mp3"></audio>
+        <!--导入各种乱七八糟的东西-->
     <head>
         <meta charset="UTF-8">
+        <script> src="script.js" ></script>
     </head>
     <body background="moon.jpeg">
         <div>
+            <div id="timeShow" class="time1"></div>
             <canvas></canvas>
             <strong><h1 class="rainbow">欢迎！这里没有什么</h1></strong>
             <h3>？</h3>
@@ -20,7 +23,6 @@
                     <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
                 </div>
             </div>
-            <!--<script> src="script.js" ></script>-->
             <p>请证明△ABC与△CBA互为全等三角形</p>
             <p>需要吗？</p>
             <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
