--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <canvas></canvas>
             <strong><h1 class="rainbow">欢迎！这里没有什么</h1></strong>
             <h3>？</h3>
-            <p>哈哈</p>
+            <p class="rainbow">哈哈</p>
             <div>
                 <div>
                     <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
