--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <p>请证明△ABC与△CBA互为全等三角形</p>
             <p>需要吗？</p>
             <div>
-                <video width="320" height="240" controls>
-                    <source src="魔法.MOV" type="video/MOV">
+                <video width="500" height="400" controls=controls>
+                    <source src="魔法.MOV">
                 </video>
                 <div>
             <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
