--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>我的主页</title>
     <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="grasswalk.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="flower dance.mp3"></audio>
         <!--导入各种乱七八糟的东西-->
     <head>
         <meta charset="UTF-8">
@@ -21,6 +21,9 @@
             <div>
                 <div>
                     <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
+                    <div>
+                        <button><a href="https://zho-b.github.io/starting">刷新</a></button>
+                    </div>
                 </div>
             </div>
             <p>请证明△ABC与△CBA互为全等三角形</p>
