--- a/index.html
+++ b/index.html
@@ -10,53 +10,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html"/ charset="UTf-8">
         <!--<script> src="script.js" ></script>-->
-        <script language="javascript">
-
-var t = null;
-
-t = setTimeout(time,1000);//开始执行
-
-function time()
-
-{
-
-clearTimeout(t);//清除定时器
-
-dt = new Date();
-
-var y=dt.getYear()+1900;
-
-var mm=dt.getMonth()+1;
-
-var d=dt.getDate();
-
-var weekday=["星期日","星期一","星期二","星期三","星期四","星期五","星期六"];
-
-var day=dt.getDay();
-
-var h=dt.getHours();
-
-var m=dt.getMinutes();
-
-var s=dt.getSeconds();
-
-if(h<10){h="0"+h;}
-
-if(m<10){m="0"+m;}
-
-if(s<10){s="0"+s;}
-
-document.getElementById("timeShow").innerHTML =  "现在的时间为："+y+"年"+mm+"月"+d+"日"+weekday[day]+"      
-
-"+h+":"+m+":"+s+"";
-
-t = setTimeout(time,1000); //设定定时器，循环执行           
-
-}
-
-</script>
     </head>
-
     <body background="moon.jpeg">
         <div>
             <p class="rainbow">欢迎！这里没有什么</p>
@@ -82,7 +36,7 @@ t = setTimeout(time,1000); //设定定时器，循环执行
             <h3>84</h3>
         </div>
         <div>
-            <a href="https://38cce07f-preview.lightly.teamcode.com/starting/le.html?server=preview&dcsId=38cce07f&token=i8vxmfBsQ3KSlhPtYcluYQ">中转站</a>
+            <a href="https://zho-b.github.io/starting/素材/le.html">中转站</a>
         </div>
         <div>哈哈，到尾了</div>
     </body>
