--- a/le.html
+++ b/le.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<html>
     <head>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
         <meta charset="GBK">
     </head>
 <body background="moon.jpeg">
 	<div>
-		<audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="grasswalk.mp3"></audio>
+		<audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src=".flower dance.mp3"></audio>
 	    <a href="https://www.baidu.com">百度</a>
 	</div>
 	<div>
 	    <a href="https://www.bilibili.com">哔哩哔哩</a>
 	</div>
 	<div>
-	    <a href="https://38cce07f-preview.lightly.teamcode.com/starting/index.html?server=preview&dcsId=38cce07f&token=i8vxmfBsQ3KSlhPtYcluYQ">主页</a>
+	    <a href="https://zho-b.github.io/starting">主页</a>
 	</div>
 	<div>
-		<a href="https://38cce07f-preview.lightly.teamcode.com/starting/storm.html?server=preview&dcsId=38cce07f&token=i8vxmfBsQ3KSlhPtYcluYQ">好看</a>
+		<a href="https://zho-b.github.io/starting/ow/storm.html">好看</a>
 	</div>
 	<div>
-		<a href="https://38cce07f-preview.lightly.teamcode.com/starting/ch-w.html?server=preview&dcsId=38cce07f&token=i8vxmfBsQ3KSlhPtYcluYQ">语文文言文</a>
+		<a href="https://zho-b.github.io/starting/ow/ch-w.html">语文文言文</a>
 	</div>
 	</body>
 	<div>暂时想不出来了</div>
