--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h3>84</h3>
         </div>
         <div>
-            <a href="https://zho-b.github.io/starting/素材/le.html">中转站</a>
+            <a href="https://zho-b.github.io/starting/ow/le.html">中转站</a>
         </div>
         <div>哈哈，到尾了</div>
     </body>
