--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>我的主页</title>
     <html lang="zh-CN">
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="grasswalk.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src=".素材/grasswalk.mp3"></audio>
         <!--导入各种乱七八糟的东西-->
     <head>
         <meta http-equiv="Content-Type" content="text/html"/ charset="UTf-8">
         <!--<script> src="script.js" ></script>-->
     </head>
-    <body background="moon.jpeg">
+    <body background=".素材/moon.jpeg">
         <div>
             <p class="rainbow">欢迎！这里没有什么</p>
             <h3>？</h3>
@@ -20,7 +20,7 @@
                 <div>
                     <p class="rainbow">如果图片加载出来一大片白，多刷新几次网页</p>
                     <div>
-                        <button><a href="https://38cce07f-preview.lightly.teamcode.com/starting/index.html?server=preview&dcsId=38cce07f&token=i8vxmfBsQ3KSlhPtYcluYQ">刷新</a></button>
+                        <button><a href="https://zho-b.github.io/starting">刷新</a></button>
                     </div>
                 </div>
             </div>
@@ -28,10 +28,10 @@
             <p>需要吗？</p>
             <div>
                 <video width="420" height="340" controls>
-                    <source src="魔法.MOV">
+                    <source src=".素材/魔法.MOV">
                 </video>
             </div>
-            <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
+            <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src=".素材/雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
             <p>йسحقθ</p>
             <h3>84</h3>
         </div>
