--- a/ow/ch-w.html
+++ b/ow/ch-w.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
 <head>
     <meta charset="GBK">
-    <title>语文重要文言文</title>
-    <link type="text/css" rel="stylesheet" href="style-ch.css"/>
+    <title>语文文言文</title>
+    <link type="text/css" rel="stylesheet" href=".素材/style-ch.css"/>
 </head>
 <body>
     <div>
