--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <!--标题-->
     <title>我的主页</title>
     <html lang="zh-CN">
-    <link href=".素材/style.css" rel="stylesheet" type="text/css"/>
-    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src=".素材/grasswalk.mp3"></audio>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/grasswalk.mp3"></audio>
         <!--导入各种乱七八糟的东西-->
     <head>
-        <meta http-equiv="Content-Type" content="text/html"/ charset="UTf-8">
+        <meta charset="UTf-8">
         <!--<script> src="script.js" ></script>-->
     </head>
-    <body background=".素材/moon.jpeg">
+    <body background="素材/moon.jpeg">
         <div>
             <p class="rainbow">欢迎！这里没有什么</p>
             <h3>？</h3>
@@ -28,15 +28,15 @@
             <p>需要吗？</p>
             <div>
                 <video width="420" height="340" controls>
-                    <source src=".素材/魔法.MOV">
+                    <source src="素材/魔法.MOV">
                 </video>
             </div>
-            <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src=".素材/雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
+            <a href="https://baike.baidu.com/item/%E9%9B%AA%E5%AE%B9%E8%9E%8D/23759084?fr=aladdin"><img src="素材/雪融容.jpg" alt="看什么，快买" width="1000" height="1000"></a>
             <p>йسحقθ</p>
             <h3>84</h3>
         </div>
         <div>
-            <a href="https://zho-b.github.io/starting/ow/le.html">中转站</a>
+            <a href="https://zho-b.github.io/starting/le.html">中转站</a>
         </div>
         <div>哈哈，到尾了</div>
     </body>
