--- a/le.html
+++ b/le.html
@@ -4,9 +4,9 @@
 	<link href="style.css" rel="stylesheet" type="text/css"/>
         <meta charset="GBK">
     </head>
-<body background="moon.jpeg">
+<body background="素材/moon.jpeg">
 	<div>
-		<audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src=".flower dance.mp3"></audio>
+		<audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/flower dance.mp3"></audio>
 	    <a href="https://www.baidu.com">百度</a>
 	</div>
 	<div>
