--- a/ow/storm.html
+++ b/ow/storm.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>首页</title>
+<title>哈哈</title>
 
 <style>
 html,body{
