--- a/le.html
+++ b/le.html
@@ -3,24 +3,27 @@
     <head>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
         <meta charset="GBK">
+	    <title>中转站</title>
     </head>
 <body background="素材/moon.jpeg">
 	<div>
 		<audio autoplay="autoplay" loop="loop" controls="controls" preload="auto" src="素材/flower dance.mp3"></audio>
-	    <a href="https://www.baidu.com">百度</a>
+	    <a href="https://www.baidu.com">百度</a><br>
 	</div>
 	<div>
-	    <a href="https://www.bilibili.com">哔哩哔哩</a>
+	    <a href="https://www.bilibili.com">哔哩哔哩</a><br>
 	</div>
 	<div>
-	    <a href="https://zho-b.github.io/starting">主页</a>
+	    <a href="https://zho-b.github.io/starting">主页</a><br>
 	</div>
 	<div>
-		<a href="https://zho-b.github.io/starting/ow/storm.html">好看</a>
+		<a href="https://zho-b.github.io/starting/ow/storm.html">好看</a><br>
 	</div>
 	<div>
-		<a href="https://zho-b.github.io/starting/ow/ch-w.html">语文文言文</a>
+		<a href="https://zho-b.github.io/starting/ow/ch-w.html">语文文言文</a><br>
 	</div>
+	<div>
+		<a href="https://zho-b.github.io/starting/ow/music.html">音乐播放</a><br>
 	</body>
 	<div>暂时想不出来了</div>
 	</html>
