--- a/ow/ch-w.html
+++ b/ow/ch-w.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="GBK">
     <title>语文文言文</title>
-    <link type="text/css" rel="stylesheet" href="style-ch.css"/>
+    <link type="text/css" rel="stylesheet" href="../style-ch.css"/>
 </head>
 <body>
     <div>
