--- a/le.html
+++ b/le.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
     <head>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
+        <link rel="icon" type="image/x-icon" href="素材/图片/皱眉.jpg" />
         <meta charset="GBK">
 	    <title>中转站</title>
     </head>
